[project]
name = "MeshCore"
version = "0.1.0"
description = ""
authors = [
    {name = "Jared Dohrman",email = "jared@dohrman.me"}
]
requires-python = ">=3.14"
dependencies = [
    "platformio (>=6.1.19,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
